# iasthk-rs

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
iasthk/: Cargo.toml
iasthk/src/: lib.rs
vedichk/: Cargo.toml  README.md
vedichk/src/: lib.rs
